# allauth-jinja

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
allauth_jinja/jinja2/account/: account_inactive.jinja  password_reset.jinja  signup.jinja  signup_closed.jinja  verification_email_required.jinja  verification_sent.jinja
allauth_jinja/jinja2/account/email/: base_message.txt
allauth_jinja/jinja2/mfa/: index.jinja
allauth_jinja/jinja2/socialaccount/: connections.jinja  login.jinja  signup.jinja
allauth_jinja/jinja2/socialaccount/snippets/: login_extra.jinja  provider_list.jinja
