[tool.poetry]
name = "allauth-jinja"
version = "0.0.3"
description = "Allauth templates rewritten in jinja."
authors = ["Eddie Cohen <eddie@lightmatter.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Lightmatter/allauth-jinja"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "allauth_jinja"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lightmatter/allauth-jinja/issues"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.5"
django-allauth = "^0.56.1"
django-jinja = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
